--- a/css/index.css
+++ b/css/index.css
@@ -3,9 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poiret+One');
 
 body {
-  background-image: url("../images/pills2.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-color: #011627;
   height: 100%;
   font-family: 'Numans', sans-serif;
 }
@@ -18,7 +16,7 @@ body {
   width:60%;
   top: 50%;
   transform: translateY(-50%);
-  background-color: rgba(0,0,0,0.5) !important;
+  background-color: #000 !important;
 }
 
 .logo .logo-caption {
@@ -35,7 +33,7 @@ body {
 }
 
 .logo .tweak {
-  color: #ff5252;
+  color: #10E4EC; 
   font-weight: bold;
 }
 
@@ -50,7 +48,7 @@ body {
 
 .login-form .input-group-text {
   width: 100%;
-  background: #ff5252;
+  background: #10E4EC;
   border: 0px;
 }
 
@@ -74,7 +72,7 @@ body {
 }
 
 .login-form button.btn-custom {
-  background: #ff5252;
+  background: #10E4EC;
 	border-color: rgba(48, 46, 45, 1);
   color: #ffffff;
   font-weight: bold;
@@ -87,7 +85,7 @@ body {
 	-o-transition: all 500ms ease;
 	transition: all 500ms ease;
 	background: rgba(48, 46, 45, 1);
-	border-color: #ff5252;
+	border-color: #10E4EC;
 }
 
 /* Chrome, Safari, Edge, Opera */
